feat:增加字典管理接口和更新swag
