# internal/router/dict_router.go
@@ -12,7 +12,7 @@ import (
 // RegisterDictRoutes 注册所有路由
 func RegisterDictRoutes(r *gin.RouterGroup, container *dig.Container) {
 
-	router := r.Group("dict")
+	router := r.Group("dicts")
 	err := container.Invoke(func(dictHandler *handler.DictHandler) {
 		// 列表
 		router.GET("/", middleware.Jwt(true), dictHandler.List)
@@ -22,6 +22,8 @@ func RegisterDictRoutes(r *gin.RouterGroup, container *dig.Container) {
 		router.DELETE("/", middleware.Jwt(true), dictHandler.Delete)
 		// 修改
 		router.PUT("/:id", middleware.Jwt(true), dictHandler.Update)
+		// 根据code获取options
+		router.GET("/:code", middleware.Jwt(true), dictHandler.GetOptions)
 	})
 	if err != nil {
 		fmt.Printf("注入 handler 失败: %v\n", err)
